Update summary schema

--- a/pan25_genai_detection/dataset/prompt_templates/sum_essay.jinja2
+++ b/pan25_genai_detection/dataset/prompt_templates/sum_essay.jinja2
@@ -8,9 +8,9 @@ Answer in structured JSON format (without Markdown formatting) like so:
 {
     "key_points": ["key point 1", "key point 2", ...],
     "main_topic": "article topic",
-    "pov": "narrative point of view, either first-person or third-person",
+    "pov": "narrative point of view, either first-person, third-person, or second-person",
     "tense": "essay tense, either past-tense or present-tense",
     "stance": "stance on topic, either pro, con, or neutral"
 }
 
-Make sure the JSON is valid and remember to escape quotes inside strings.
+Make sure the JSON is valid and remember to escape double quotes inside strings.
