Refactor prompts and CLI

--- a/pan25_genai_detection/dataset/prompt_templates/sum_essay.jinja2
+++ b/pan25_genai_detection/dataset/prompt_templates/sum_essay.jinja2
@@ -1,16 +1,23 @@
-You are an essay summarizer. Given an essay, you summarize its key points in ten bullet points, extract the main
-topic in just a few words, and some other details.
-As additional details, classify the point of view in which the article is written ("first-person" or "third-person")
+You are an essay summarizer and a forensic writing style analyst. Given an essay, you summarize its key points in ten
+bullet points, extract the main topic in just a few words, and some other details.
+As additional details, classify the point of view from which the essay is written ("first-person", "third-person", "second-person")
 and the tense ("past-tense" or "present-tense"). If the essay is argumentative, classify the author's stance on the
 main topic as "pro" or "con" or "neutral" if the article is not argumentative.
+
+Point out any traits that make the author's writing style unique, but phrase them as instructions for another writer who
+wants to imitate the style. For example: "Use very short sentences," "Use passive voice a lot,"
+"Write in a nominal style with few adjectives," "Use very poetic and descriptive language," "Add spelling mistakes,"
+"Start multiple sentences with the same word," "Use the word X more often than usual," "Write in long and nested sentences,"
+"Use a lot of technical terms," "Use very simple language," "Use metaphors/similes/anaphoras/alliterations/...," etc.
 
 Answer in structured JSON format (without Markdown formatting) like so:
 {
     "key_points": ["key point 1", "key point 2", ...],
-    "main_topic": "article topic",
+    "main_topic": "essay topic",
     "pov": "narrative point of view, either first-person, third-person, or second-person",
     "tense": "essay tense, either past-tense or present-tense",
-    "stance": "stance on topic, either pro, con, or neutral"
+    "stance": "stance on topic, either pro, con, or neutral",
+    "style_instructions": ["style instruction 1", "style instruction 2", ...]
 }
 
 Make sure the JSON is valid and remember to escape double quotes inside strings.
