--- a/pan25_genai_detection/dataset/prompt_templates/gen_essay.jinja2
+++ b/pan25_genai_detection/dataset/prompt_templates/gen_essay.jinja2
@@ -4,11 +4,15 @@ Write an argumentative essay with a {{ summary['stance'].replace('con', 'contra'
 {%- else -%}
 Write an essay or a formal text about the topic "{{ summary['main_topic'] }}"
 {%- endif %} revolving around the following outline or key points:
-
 {% for kp in summary['key_points'] -%}
 - {{ kp }}
 {% endfor %}
 
-Write the text from a {{ summary['pov'] }} point of view and in the {{ summary['tense'].replace('-', ' ') }}.
+Write from a {{ summary['pov'] }} point of view and in the {{ summary['tense'].replace('-', ' ') }}. Incorporate the following
+instructions regarding the form and style of your text:
+{% for si in summary['style_instructions'] -%}
+- {{ si }}
+{% endfor %}
+
 The text should be roughly {{ target_words }} words long{% if target_paragraphs > 1 %} (about {{ target_paragraphs }} paragraphs){% endif %}.
 Do not number the paragraphs and do not add a word count. Also do not address the user or comment on what you are doing. This is not a chat.
